@@ -11,6 +11,9 @@ Fixed Calltip tab refresh problem on Windows.
 
 shell.autoCompleteAutoHide added with default of True.
 
+Changed default namespace of Shell to __main__.__dict__, instead of an
+empty dictionary.
+
 
 0.9.3 (9/25/2003 to 1/24/2004)
 ------------------------------
